# mosaic_gnss_driver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  mosaic.dconfig  package.xml  rosconsole.conf  ws_build.sh
.github/workflows/: clang-format-check.yml  clang-tidy-check.yml  linter.yml  ros-ci.yml
cmake/: TestConnections.cmake
config/: driver.yml
docs/: mosaic.dconfig
include/: serial.h
include/mosaic_gnss_driver/: countOnes.h  data_buffers.h  mosaic_gnss.h  node.hpp
include/mosaic_gnss_driver/connections/: connection.h  pcap.h  serial.h  tcp.h  udp.h
include/mosaic_gnss_driver/parsers/nmeaparse/: Event.h  GPSFix.h  GPSService.h  NMEAParser.h
include/mosaic_gnss_driver/parsers/sbf/: block_parsers.h  helpers.h  sbf.h
include/mosaic_gnss_driver/sbf/: helpers.h  sbf.h  sbf_conversions.h
include/mosaic_utils/: serial.h
launch/: mosaic_gnss.launch
nmea/: GPSFix.cpp  NMEAParser.cpp
src/: countOnes.cpp  main.cpp  main_no_ros.cpp  mosaic_gnss.cpp  serial.cpp
src/connections/: pcap.cpp  serial.cpp  tcp.cpp  udp.cpp
src/core/connections/: pcap.cpp  serial.cpp  tcp.cpp  udp.cpp
src/core/parsers/nmea/: GPSFix.cpp  GPSService.cpp  NMEAParser.cpp  README.md  nmea_parser_test.cpp
src/core/parsers/sbf/: README.md  helpers.cpp  sbf.cpp
src/core/parsers/sbf/block_parsers/: cartesian.cpp  geodetic.cpp
src/core/util/: serial.cpp
src/mosaic_utils/: serial.cpp
src/nmea/: GPSService.cpp  NMEAParser.cpp  nmea_parser_test.cpp
src/sbf/: README.md  sbf.cpp  sbf_test.cpp
test/: connections_test.cpp  pcap_test.cpp  pcap_testing.cpp  sample_test.cpp  tcp_test.cpp  test_conn.cpp  test_connection.cpp  test_subs.cpp
test/data/: README.md  mosaic_capture_001.pcap
test/data/nmea/: capture_002.nmea  capture_002.pcap  capture_004.nmea  capture_004.pcap
test/data/sbf/: 001.pcap  001_blocks.txt  003.pcap  003.sbf  003_blocks.txt  005_blocks_nocrc.txt  006.pcap  006_blocks.txt  007_blocks.txt  README.md  cap_003_blocks.txt  capture_001.sbf  nov2-nmea-set1.pcap  nov2-sbf-set2.pcap  nov2-sbf-set4.pcap  sbf-all.pcap
test/data/sbf/scripts/: README.md  id_to_name.py  save_block_names.py  sbf_name_id_desc.pkl
tests/: CMakeLists.txt  test1.cpp
