<?xml version="1.0"?>
<package format="2">
    <name>mosaic_gnss_driver</name>
    <version>0.0.1</version>
    <description>Driver for Septentrio MOSAIC GNSS</description>

    <maintainer email="ashwin5059198@gmail.com">Ashwin A Nayar</maintainer>
    <maintainer email="suraj.rathi00@gmail.com">Suraj Rathi</maintainer>
    <maintainer email="sachi@todo.todo">Sachidanand V S</maintainer>

    <license>BSDv3</license>

    <url type="website">https://www.teamabhiyaan.com</url>

    <author email="ashwin5059198@gmail.com">Ashwin A Nayar</author>
    <author email="suraj.rathi00@gmail.com">Suraj Rathi</author>
    <author email="sachi@todo.todo">Sachidanand V S</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nmea_msgs</depend>
    <depend>libpcap</depend>
    <depend>libasio-dev</depend>

    <test_depend>rostest</test_depend>
    <export>
    </export>
</package>
